adding dependency injection library

--- a/force-app/force-di/main/classes/di_Injector.cls
+++ b/force-app/force-di/main/classes/di_Injector.cls
@@ -30,23 +30,19 @@ public class di_Injector {
     /**
      * Default Injector instance configured via Custom Metadata bindings
      **/
-    public static final di_Injector Org =
-        new di_Injector(
-            new List<di_Module> {
-        new CustomMetadataModule()
-    });
+    public static final di_Injector Org = new di_Injector(new List<di_Module>{ new CustomMetadataModule() });
 
     /**
      * Bindings visible to this Injector
      **/
     @TestVisible
-    public di_Binding.Resolver Bindings {get; private set;}
+    public di_Binding.Resolver Bindings { get; private set; }
 
     /**
      * Configures the Injector with the bindings configured by the given Module
      **/
     public di_Injector(di_Module module) {
-        this(new List<di_Module> { module });
+        this(new List<di_Module>{ module });
     }
 
     /**
@@ -83,11 +79,11 @@ public class di_Injector {
      *   (if params is specified, implicitly uses the Provider interface)
      **/
     public Object getInstance(String developerName, Object params) {
-        if ( String.isBlank(developerName) ) {
+        if (String.isBlank(developerName)) {
             throw new InjectorException('Request for Binding cannot take "developerName" parameter of null');
         }
-        List<di_Binding> bindingsFound = this.Bindings.byName( developerName.toLowerCase().trim() ).get();
-        if ( bindingsFound == null || bindingsFound.isEmpty() ) {
+        List<di_Binding> bindingsFound = this.Bindings.byName(developerName.toLowerCase().trim()).get();
+        if (bindingsFound == null || bindingsFound.isEmpty()) {
             throw new InjectorException('Binding for "' + developerName + '" not found');
         }
         return bindingsFound[0].getInstance(params);
@@ -113,23 +109,20 @@ public class di_Injector {
      *   (if params is specified, implicitly uses the Provider interface)
      **/
     public Object getInstance(String developerName, Schema.SObjectType bindingSObjectType, Object params) {
-        if ( String.isBlank(developerName) ) {
+        if (String.isBlank(developerName)) {
             throw new InjectorException('Request for Binding cannot take "developerName" parameter of null');
         }
 
-        if ( bindingSObjectType == null ) {
+        if (bindingSObjectType == null) {
             throw new InjectorException('Request for Binding cannot take "bindingSObjectType" parameter of null');
         }
 
-        List<di_Binding> bindingsFound = this.Bindings.bySObject( bindingSObjectType )
-                                         .byName( developerName.toLowerCase().trim() )
-                                         .get();
+        List<di_Binding> bindingsFound = this.Bindings.bySObject(bindingSObjectType).byName(developerName.toLowerCase().trim()).get();
 
-        if ( bindingsFound == null || bindingsFound.isEmpty() || bindingsFound[0] == null) {
+        if (bindingsFound == null || bindingsFound.isEmpty() || bindingsFound[0] == null) {
             throw new InjectorException('Binding for "' + developerName + '" and SObjectType "' + bindingSObjectType + '" not found');
         }
         return bindingsFound[0].getInstance(params);
-
     }
 
     /**
@@ -137,49 +130,55 @@ public class di_Injector {
      **/
     @testVisible
     private class CustomMetadataModule extends di_Module {
-
         private string bindingObjectApiName = null;
         // Method to convert a metadata into a wrapper class,
         // so that we can inject dependencies from test classes.
         @testVisible
-        private List<di_BindingConfigWrapper> getDIBinding(){
+        private List<di_BindingConfigWrapper> getDIBinding() {
             List<di_BindingConfigWrapper> recordList = new List<di_BindingConfigWrapper>();
-            List<di_Binding__mdt> bindingMDTRec = [SELECT QualifiedAPIName
-                                                        , DeveloperName
-                                                        , NamespacePrefix
-                                                        , Type__c
-                                                        , To__c
-                                                        , BindingObject__c
-                                                        , BindingObject__r.QualifiedApiName
-                                                        , BindingObjectAlternate__c
-                                                        , BindingSequence__c
-                                                     FROM di_Binding__mdt];
-            for(di_Binding__mdt records :bindingMDTRec) {
+            List<di_Binding__mdt> bindingMDTRec = [
+                SELECT
+                    QualifiedAPIName,
+                    DeveloperName,
+                    NamespacePrefix,
+                    Type__c,
+                    To__c,
+                    BindingObject__c,
+                    BindingObject__r.QualifiedApiName,
+                    BindingObjectAlternate__c,
+                    BindingSequence__c
+                FROM di_Binding__mdt
+            ];
+            for (di_Binding__mdt records : bindingMDTRec) {
                 recordList.add(new di_BindingConfigWrapper(records));
             }
             // When we want to mock data from metadata for injecting dependencies.
-            if(di_Injector.mock_BindingConfigurationWrappersOuter != null) {
+            if (di_Injector.mock_BindingConfigurationWrappersOuter != null) {
                 recordList = di_Injector.mock_BindingConfigurationWrappersOuter;
             }
             return recordList;
         }
         public override void configure() {
             // TODO: Support Namespace
-            for(di_BindingConfigWrapper bindingConfig :getDIBinding()) {
+            for (di_BindingConfigWrapper bindingConfig : getDIBinding()) {
                 bind(bindingConfig.DeveloperName);
                 type(bindingConfig.Type);
-                if( String.isNotBlank(bindingConfig.BindingObject)
-                    || String.isNotBlank(bindingConfig.BindingObjectAlternate)) {
-                    bindingObjectApiName =  String.isNotBlank(bindingConfig.BindingObject)
-                                            ? bindingConfig.bindingObjectQualifiedApiName.toLowerCase().trim()
-                                            : bindingConfig.BindingObjectAlternate.toLowerCase().trim();
-                    Schema.DescribeSobjectResult[] results = Schema.describeSObjects(new String[] { bindingObjectApiName });
-                    if(results.size() != 1) {
-                        throw new InjectorException('Failed to find SObject ' + bindingObjectApiName + ' referenced by binding ' + bindingConfig.DeveloperName);
+                if (String.isNotBlank(bindingConfig.BindingObject) || String.isNotBlank(bindingConfig.BindingObjectAlternate)) {
+                    bindingObjectApiName = String.isNotBlank(bindingConfig.BindingObject)
+                        ? bindingConfig.bindingObjectQualifiedApiName.toLowerCase().trim()
+                        : bindingConfig.BindingObjectAlternate.toLowerCase().trim();
+                    Schema.DescribeSobjectResult[] results = Schema.describeSObjects(new List<String>{ bindingObjectApiName });
+                    if (results.size() != 1) {
+                        throw new InjectorException(
+                            'Failed to find SObject ' +
+                            bindingObjectApiName +
+                            ' referenced by binding ' +
+                            bindingConfig.DeveloperName
+                        );
                     }
                     bind(results[0].getSObjectType()); // if it is getting here, then it is finding a SObject to add to the binding
                 }
-                if(bindingConfig.BindingSequence != null) {
+                if (bindingConfig.BindingSequence != null) {
                     sequence(Integer.valueOf(bindingConfig.BindingSequence));
                 }
                 data(bindingConfig);
@@ -188,5 +187,6 @@ public class di_Injector {
         }
     }
 
-    public class InjectorException extends Exception {}
+    public class InjectorException extends Exception {
+    }
 }
