--- a/force-app/force-di/main/classes/di_NamespaceClass.cls
+++ b/force-app/force-di/main/classes/di_NamespaceClass.cls
@@ -1,4 +1,3 @@
-public without sharing class di_NamespaceClass 
-{
+public without sharing class di_NamespaceClass {
     public static final String CURRENTNAMESPACE = di_NamespaceClass.class.getName().substringBefore('.');
 }
