--- a/force-app/force-di/main/classes/di_Binding.cls
+++ b/force-app/force-di/main/classes/di_Binding.cls
@@ -22,36 +22,39 @@
  *  OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  *  OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  *  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-**/
+ **/
 
 /**
  * Wrap a binding config to subclass it and aid in resolving target binding
  *   (also leverages the Provider interface to allow for more advanced instantiation)
  **/
 public abstract class di_Binding implements Comparable {
-
-    public BindingType BindingType {get; private set;}
-
-    @AuraEnabled
-    public String BindingTypeAsString {get { return BindingType.name();} }
+    public BindingType BindingType { get; private set; }
 
     @AuraEnabled
-    public String NamespacePrefix {get;private set;}
+    public String BindingTypeAsString {
+        get {
+            return BindingType.name();
+        }
+    }
 
     @AuraEnabled
-    public String DeveloperName {get;private set;}
+    public String NamespacePrefix { get; private set; }
 
     @AuraEnabled
-    public SObjectType BindingObject {get;private set;}
+    public String DeveloperName { get; private set; }
 
     @AuraEnabled
-    public Integer BindingSequence {get;private set;}
+    public SObjectType BindingObject { get; private set; }
 
     @AuraEnabled
-    public Object To {get;private set;}
+    public Integer BindingSequence { get; private set; }
 
     @AuraEnabled
-    public Object Data {get;private set;}
+    public Object To { get; private set; }
+
+    @AuraEnabled
+    public Object Data { get; private set; }
 
     private Boolean IsProvider = false;
     private Object Injected = null;
@@ -74,11 +77,11 @@ public abstract class di_Binding implements Comparable {
      * Gets the instance of the thing the binding points to
      **/
     public Object getInstance(Object params, Boolean newInstance) {
-        if(IsProvider) {
+        if (IsProvider) {
             return newInstance(params);
-        } else if(newInstance==true) {
+        } else if (newInstance == true) {
             return newInstance(params);
-        } else if(Injected==null) {
+        } else if (Injected == null) {
             Injected = newInstance(params);
         }
         return Injected;
@@ -102,10 +105,10 @@ public abstract class di_Binding implements Comparable {
      * Defaults to DeveloperName or binding object and sequence if specified
      **/
     public override String toString() {
-        if(BindingObject!=null) {
+        if (BindingObject != null) {
             String hashValue = BindingObject.getDescribe().getName();
-            if(BindingSequence!=null) {
-                hashValue+= '#'+String.valueOf(BindingSequence).leftPad(4,'0');
+            if (BindingSequence != null) {
+                hashValue += '#' + String.valueOf(BindingSequence).leftPad(4, '0');
             }
             return hashValue;
         } else {
@@ -114,8 +117,8 @@ public abstract class di_Binding implements Comparable {
     }
 
     /**
-    * Allows bindings to resolve dynamically (e.g. custom constructors) based passing in params if needed
-    **/
+     * Allows bindings to resolve dynamically (e.g. custom constructors) based passing in params if needed
+     **/
     public interface Provider {
         Object newInstance(Object params);
     }
@@ -124,16 +127,15 @@ public abstract class di_Binding implements Comparable {
      * Simple fluent API to resolve Bindings, used by Injector methods or called directly
      **/
     public class Resolver {
-
         // Filter params for resolving bindings
         private String developerName;
         private SObjectType bindingObject;
         private boolean bindingsAreRequired = true;
-        
+
         // Modules used by the Resolver to discover bindings
         private List<di_Module> modules = null;
         // Discovered bindings via the modules supplied to this resolver
-// TODO: Consider changing this from a list<di_Binding> to a map<developerName, map<BindingObject, List<di_Binding>> 
+        // TODO: Consider changing this from a list<di_Binding> to a map<developerName, map<BindingObject, List<di_Binding>>
         private List<di_Binding> bindings = null;
 
         /**
@@ -149,7 +151,7 @@ public abstract class di_Binding implements Comparable {
         public Resolver set(di_Module module) {
             modules.clear();
             modules.add(module);
-// TODO: impact assessment on type change
+            // TODO: impact assessment on type change
             bindings = null; // Force reload of bindings
             return this;
         }
@@ -159,7 +161,7 @@ public abstract class di_Binding implements Comparable {
          **/
         public Resolver add(di_Module module) {
             modules.add(module);
-// TODO: impact assessment on type change
+            // TODO: impact assessment on type change
             bindings = null; // Force reload of bindings
             return this;
         }
@@ -198,24 +200,27 @@ public abstract class di_Binding implements Comparable {
 
         /**
          * Replaces an existing binding for test mocking purposes.  This method is used in conjunction with the filtering
-         * param methods of the di_Binding.Resolver class like "byName(String)" and "bySObject(SObjectType)". 
+         * param methods of the di_Binding.Resolver class like "byName(String)" and "bySObject(SObjectType)".
          *
          *  @param mockType - this is the Apex class that replaces the binding that is currently in default list of bindings
          *  @return the current di_Binding.Resolver instance
          */
-        public Resolver replaceBindingWith( Object mockType )
-        {
-            // system.debug('replaceBindingWith method called');
+        public Resolver replaceBindingWith(Object mockType) {
 
             // Late resolve bindings to allow runtime module injection via set and add methods
             loadBindings();
 
             // find existing binding's position in the list.
-            for (Integer currentBindingsIndex = 0; currentBindingsIndex < this.bindings.size(); currentBindingsIndex++) 
-            {
-                if ( isBindingMatchByFilteringCriteria( this.bindings[currentBindingsIndex] ) )
-                {
-                    this.bindings[currentBindingsIndex] = di_Binding.newInstance(di_Binding.BindingType.Apex, this.developerName, this.bindingObject, null, mockType, null);
+            for (Integer currentBindingsIndex = 0; currentBindingsIndex < this.bindings.size(); currentBindingsIndex++) {
+                if (isBindingMatchByFilteringCriteria(this.bindings[currentBindingsIndex])) {
+                    this.bindings[currentBindingsIndex] = di_Binding.newInstance(
+                        di_Binding.BindingType.Apex,
+                        this.developerName,
+                        this.bindingObject,
+                        null,
+                        mockType,
+                        null
+                    );
                     break;
                 }
             }
@@ -223,7 +228,6 @@ public abstract class di_Binding implements Comparable {
             this.developerName = null;
             this.bindingObject = null;
 
-            // system.debug('replaceBindingWith method finished');
 
             return this;
         }
@@ -235,62 +239,46 @@ public abstract class di_Binding implements Comparable {
          *  @param The current di_Binding from the Resolver's list of bindings to examine
          *  @return True if the current di_Binding is a match to the filtering critera.
          */
-        private Boolean isBindingMatchByFilteringCriteria( di_Binding bind )
-        {
-            // System.debug('isBindingMatchByFilteringCriteria method called');
+        private Boolean isBindingMatchByFilteringCriteria(di_Binding bind) {
             Boolean isMatch = false;
-            // system.debug('bind == ' + bind);
-            // system.debug('this.developerName == ' + this.developerName);
-            // system.debug('this.bindingObject == ' + this.bindingObject); 
-            // System.debug('bind.BindingObject == ' + bind.BindingObject);
-            // System.debug('bind.DeveloperName == ' + bind.DeveloperName);
 
             // if both filtering parameters were specified
-            if ( String.isNotBlank(this.developerName) && this.bindingObject != null ) 
-            {
+            if (String.isNotBlank(this.developerName) && this.bindingObject != null) {
                 // then require both match for the binding to be included.
-                if ( ( this.developerName.equalsIgnoreCase( bind.DeveloperName )
-                        // or same check for the reference without a namespace prefix
-                        || this.developerName.equalsIgnoreCase( di_NamespaceClass.CURRENTNAMESPACE + '.' + bind.DeveloperName )
-                        )
-                    && this.bindingObject == bind.BindingObject )
-                {
+                if (
+                    (this.developerName.equalsIgnoreCase(bind.DeveloperName) ||
+                    // or same check for the reference without a namespace prefix
+                    this.developerName.equalsIgnoreCase(di_NamespaceClass.CURRENTNAMESPACE + '.' + bind.DeveloperName)) &&
+                    this.bindingObject == bind.BindingObject
+                ) {
                     isMatch = true;
                 }
-            }
-            else {
+            } else {
                 // else match on any of the available filtering parameters
-                if ( String.isNotBlank(this.developerName)
-                    && ( this.developerName.equalsIgnoreCase( bind.DeveloperName )
-                        // or same check for the reference without a namespace prefix
-                        || this.developerName.equalsIgnoreCase( di_NamespaceClass.CURRENTNAMESPACE + '.' + bind.DeveloperName )
-                        )
-                    ) 
-                {
+                if (
+                    String.isNotBlank(this.developerName) &&
+                    (this.developerName.equalsIgnoreCase(bind.DeveloperName) ||
+                    // or same check for the reference without a namespace prefix
+                    this.developerName.equalsIgnoreCase(di_NamespaceClass.CURRENTNAMESPACE + '.' + bind.DeveloperName))
+                ) {
                     isMatch = true;
-                } 
-                else if (this.bindingObject != null && bind.BindingObject == this.bindingObject) 
-                {
+                } else if (this.bindingObject != null && bind.BindingObject == this.bindingObject) {
                     isMatch = true;
                 }
             }
-            
-            // system.debug('isMatch == ' + isMatch); 
+
 
             return isMatch;
         }
 
-        private void loadBindings()
-        {
-            if ( this.bindings == null ) 
-            {
+        private void loadBindings() {
+            if (this.bindings == null) {
                 // Ask each module to configure and aggregate the resulting bindings
                 this.bindings = new List<di_Binding>();
-                for (di_Module module : modules) 
-                {
+                for (di_Module module : modules) {
                     module.configure();
-                    for(di_Binding bind : module.getBindings()) {
-                        if(bind.BindingType == di_Binding.BindingType.Module) {
+                    for (di_Binding bind : module.getBindings()) {
+                        if (bind.BindingType == di_Binding.BindingType.Module) {
                             di_Module embeddedModule = (di_Module) bind.getInstance();
                             embeddedModule.configure();
                             this.bindings.addAll(embeddedModule.getBindings());
@@ -306,23 +294,20 @@ public abstract class di_Binding implements Comparable {
          * Returns a filtered and sorted list of known bindings
          * Priority is given to filtering by DeveloperName if specified
          **/
-        public List<di_Binding> get() 
-        {
+        public List<di_Binding> get() {
             list<di_Binding> matchedBindings = di_PlatformCache.getInstance().retrieveBindings(this.developerName, this.bindingObject);
-            
-            if ( ( bindingsAreRequired && matchedBindings.isEmpty() && di_PlatformCache.isStoringBindingInPlatformCache() ) 
-                || ! di_PlatformCache.isStoringBindingInPlatformCache()
-                )
-            {
+
+            if (
+                (bindingsAreRequired && matchedBindings.isEmpty() && di_PlatformCache.isStoringBindingInPlatformCache()) ||
+                !di_PlatformCache.isStoringBindingInPlatformCache()
+            ) {
                 // Late resolve bindings to allow runtime module injection via set and add methods
                 loadBindings();
 
                 // Filter bindings returned by preconfigured criteria
                 // List<di_Binding> matchedBindings = new List<di_Binding>();
-                for (di_Binding bind : bindings) 
-                {
-                    if ( isBindingMatchByFilteringCriteria(bind) )
-                    {
+                for (di_Binding bind : bindings) {
+                    if (isBindingMatchByFilteringCriteria(bind)) {
                         matchedBindings.add(bind);
                     }
                 }
@@ -331,36 +316,43 @@ public abstract class di_Binding implements Comparable {
             this.developerName = null;
             this.bindingObject = null;
             matchedBindings.sort();
-            
+
             // In case the default behavior was momentarily overridden, return the Resolver back to default behavior for next call.
             this.bindingsAreRequired = true;
-            
+
             return matchedBindings;
         }
     }
 
-    public class BindingException extends Exception {}
+    public class BindingException extends Exception {
+    }
 
     /**
      * Types of Binding implementations supported by the framework
      **/
-    public enum BindingType { Apex, VisualforceComponent, LightningComponent, Flow, Module }
+    public enum BindingType {
+        Apex,
+        VisualforceComponent,
+        LightningComponent,
+        Flow,
+        Module
+    }
 
     /**
      * Returns the applicable Binding impl to resolve the type of binding provided
      **/
     public static di_Binding newInstance(
-            BindingType bindType,
-            String developerName,
-            SObjectType bindingObject,
-            Integer bindingSequence,
-            Object to,
-            Object bindingData) 
-    {
+        BindingType bindType,
+        String developerName,
+        SObjectType bindingObject,
+        Integer bindingSequence,
+        Object to,
+        Object bindingData
+    ) {
         // Return an applicable Binding subclass for the given binding type
         Type implType = BINDING_IMPLS_BY_TYPE.get(bindType);
 
-        if ( implType != null ) {
+        if (implType != null) {
             di_Binding binding = (di_Binding) implType.newInstance();
             binding.BindingType = bindType;
             binding.DeveloperName = developerName;
@@ -374,43 +366,41 @@ public abstract class di_Binding implements Comparable {
     }
 
     // Maps binding type to the applicable impl
-    private static final Map<BindingType, Type> BINDING_IMPLS_BY_TYPE =
-        new Map<BindingType, Type> {
-            BindingType.Apex => ApexBinding.class,
-            BindingType.LightningComponent => LightningComponentBinding.class,
-            BindingType.VisualforceComponent => VisualForceComponentBinding.class,
-            BindingType.Flow => FlowBinding.class,
-            BindingType.Module => ApexBinding.class
-        };
+    private static final Map<BindingType, Type> BINDING_IMPLS_BY_TYPE = new Map<BindingType, Type>{
+        BindingType.Apex => ApexBinding.class,
+        BindingType.LightningComponent => LightningComponentBinding.class,
+        BindingType.VisualforceComponent => VisualForceComponentBinding.class,
+        BindingType.Flow => FlowBinding.class,
+        BindingType.Module => ApexBinding.class
+    };
 
     /**
      * Bindings to Apex classes (optionally via Provider interface)
      **/
-    private class ApexBinding extends di_Binding 
-    {
-        public override Object newInstance(Object params) 
-        {
+    private class ApexBinding extends di_Binding {
+        public override Object newInstance(Object params) {
             // Type binding?
-            if ( To instanceof String ) 
-            {
+            if (To instanceof String) {
                 // Leverage namespace if the Binding has one
                 String className = (String) To;
-                Type toType = NameSpacePrefix==null ? Type.forName(className) : Type.forName(NamespacePrefix, className);
-                if ( toType == null ) 
-                {
+                Type toType = NameSpacePrefix == null ? Type.forName(className) : Type.forName(NamespacePrefix, className);
+                if (toType == null) {
                     throw new BindingException('Apex binding ' + DeveloperName + ' implementation ' + To + ' does not exist');
                 }
                 Object toObject = toType.newInstance();
                 // Is this Apex binding resolved via a Provider?
                 IsProvider = toObject instanceof Provider;
-                if ( IsProvider )
-                {
+                if (IsProvider) {
                     return ((Provider) toObject).newInstance(params);
-                } 
-                else if ( params != null ) 
-                {
+                } else if (params != null) {
                     // Params supplied but the binding does not reference a Provider?
-                    throw new BindingException('Apex binding ' + DeveloperName + ' implementation ' + className + ' does not implement the Provider interface.');
+                    throw new BindingException(
+                        'Apex binding ' +
+                        DeveloperName +
+                        ' implementation ' +
+                        className +
+                        ' does not implement the Provider interface.'
+                    );
                 }
                 return toObject;
             }
@@ -422,28 +412,33 @@ public abstract class di_Binding implements Comparable {
     /**
      * Bindings to VF Components via Provider interface (required)
      **/
-    private class VisualForceComponentBinding extends di_Binding 
-    {
-        public  override Object newInstance(Object params) 
-        {
+    private class VisualForceComponentBinding extends di_Binding {
+        public override Object newInstance(Object params) {
             // Type binding?
-            if ( To instanceof String ) 
-            {
+            if (To instanceof String) {
                 // Visualforce Components references must be made via an Apex class implementing the Provider interface
                 String className = (String) To;
-                Type toType = NamespacePrefix==null ? Type.forName(className) : Type.forName(NamespacePrefix, className);
-                if ( toType==null )
-                {
-                    throw new BindingException('Visualforce Component binding ' + DeveloperName + ' implementation ' + className + ' does not exist.');
+                Type toType = NamespacePrefix == null ? Type.forName(className) : Type.forName(NamespacePrefix, className);
+                if (toType == null) {
+                    throw new BindingException(
+                        'Visualforce Component binding ' +
+                        DeveloperName +
+                        ' implementation ' +
+                        className +
+                        ' does not exist.'
+                    );
                 }
                 // Visualforce Components have to be resolved via a Provider
                 Object toObject = toType.newInstance();
                 IsProvider = toObject instanceof Provider;
-                if ( IsProvider )
-                {
+                if (IsProvider) {
                     return ((Provider) toObject).newInstance(params);
                 }
-                throw new BindingException('Visualforce Component binding ' + DeveloperName + ' must point to a class implementing the Provider interface.');
+                throw new BindingException(
+                    'Visualforce Component binding ' +
+                    DeveloperName +
+                    ' must point to a class implementing the Provider interface.'
+                );
             }
             // Instance binding
             return To;
@@ -453,10 +448,8 @@ public abstract class di_Binding implements Comparable {
     /**
      * Bindings to Lightning Components (Provider interface not currently supported)
      **/
-    private class LightningComponentBinding extends di_Binding 
-    {
-        public override Object newInstance(Object params) 
-        {
+    private class LightningComponentBinding extends di_Binding {
+        public override Object newInstance(Object params) {
             // Lightning Component bindings are resolve by the Lightning 'inject' Component included in this library
             return To;
         }
@@ -465,16 +458,12 @@ public abstract class di_Binding implements Comparable {
     /**
      * Bindings to Flows (Provider interface not currently supported)
      **/
-    private class FlowBinding extends di_Binding 
-    {
-        public  override Object newInstance(Object params) 
-        {
+    private class FlowBinding extends di_Binding {
+        public override Object newInstance(Object params) {
             // Flow name binding?
-            if ( To instanceof String ) 
-            {
+            if (To instanceof String) {
                 String flowName = (String) To;
-                if ( params instanceof Map<String, Object> )
-                {
+                if (params instanceof Map<String, Object>) {
                     return new di_Flow(Flow.Interview.createInterview(flowName, (Map<String, Object>) params));
                 }
                 return new di_Flow(Flow.Interview.createInterview(flowName, new Map<String, Object>()));
