--- a/force-app/force-di/test/classes/di_InjectorCMPFlowProxyControllerTest.cls
+++ b/force-app/force-di/test/classes/di_InjectorCMPFlowProxyControllerTest.cls
@@ -1,19 +1,14 @@
 @isTest
 private with sharing class di_InjectorCMPFlowProxyControllerTest {
-
     @isTest
-    private static void givenValueWhenGetInjectThenThrowException(){
-
+    private static void givenValueWhenGetInjectThenThrowException() {
         di_InjectorComponentFlowProxyController newObj = new di_InjectorComponentFlowProxyController();
         newObj.FlowNameValue = 'AccountRecordFlow';
-        newObj.InputVariablesValue = new Map<String,Object> {
-            'Account'=>null
-        };
+        newObj.InputVariablesValue = new Map<String, Object>{ 'Account' => null };
         try {
             newObj.getInject();
-        } catch(Exception e) {
+        } catch (Exception e) {
             System.assertEquals(e.getMessage().contains('Invalid value for property name'), true, 'correct Exception is thrown');
         }
     }
-
 }
