--- a/force-app/force-di/test/classes/di_InjectorTest.cls
+++ b/force-app/force-di/test/classes/di_InjectorTest.cls
@@ -30,47 +30,45 @@
  */
 @IsTest
 private class di_InjectorTest {
-
     //TODO
     @IsTest
-    private static void test(){
+    private static void test() {
         di_module module = new di_module();
         di_Injector injector = new di_Injector(module);
 
-        di_Injector.Org.Bindings.byName( Contact.class.getName() )
-        .bySObject( Account.sObjectType )
-        .replaceBindingWith( null );
-
+        di_Injector.Org.Bindings.byName(Contact.class.getName()).bySObject(Account.sObjectType).replaceBindingWith(null);
     }
     @IsTest
-    private static void givenListOfModulesBindThenGetCount(){
+    private static void givenListOfModulesBindThenGetCount() {
         // Given
-        List<di_module> modules =  new List<di_module > {
-        };
+        List<di_module> modules = new List<di_module>{};
         final Integer expected = 0;
         // When
         di_Injector injector = new di_Injector(modules);
         // Then
         system.assertEquals(expected, injector.Bindings.get().size());
-
     }
 
     @isTest
-    static void givenInstanceThenGetThatInstance(){
+    static void givenInstanceThenGetThatInstance() {
         // Given
-        di_module module=new di_module();
+        di_module module = new di_module();
         di_Binding bobBinding = di_Binding.newInstance(
             di_Binding.BindingType.Apex,
-            di_BindingTest.Bob.class.getName(), null, null,
-            di_BindingTest.Bob.class.getName(), null);
+            di_BindingTest.Bob.class.getName(),
+            null,
+            null,
+            di_BindingTest.Bob.class.getName(),
+            null
+        );
 
         module.getBindings().add(bobBinding);
 
         di_Injector injector = new di_Injector(module);
         // When
-        Object result=injector.getInstance(di_BindingTest.Bob.class);
-        Object resultNoParams=injector.getInstance(di_BindingTest.Bob.class,(Object)null);
-        Object resultByName=injector.getInstance(di_BindingTest.Bob.class.getName());
+        Object result = injector.getInstance(di_BindingTest.Bob.class);
+        Object resultNoParams = injector.getInstance(di_BindingTest.Bob.class, (Object) null);
+        Object resultByName = injector.getInstance(di_BindingTest.Bob.class.getName());
         // Then
         system.assertEquals(true, result instanceof di_BindingTest.Bob);
         system.assertEquals(true, resultByName instanceof di_BindingTest.Bob);
@@ -78,68 +76,64 @@ private class di_InjectorTest {
     }
 
     @isTest
-    static void givenInstanceNameThenGetException(){
+    static void givenInstanceNameThenGetException() {
         // Given
-        di_module module=new di_module();
+        di_module module = new di_module();
         di_Injector injector = new di_Injector(module);
         Boolean hasException = false;
         // When
         try {
-            injector.getInstance((String)null);
+            injector.getInstance((String) null);
         } catch (di_Injector.InjectorException excp) {
-            hasException=true;
+            hasException = true;
         }
         // Then
         system.assertEquals(true, hasException);
         // When
-        hasException=false;
+        hasException = false;
         try {
             injector.getInstance('');
         } catch (di_Injector.InjectorException excp) {
-            hasException=true;
+            hasException = true;
         }
         // Then
         system.assertEquals(true, hasException);
-
     }
 
     @isTest
-    static void givenNullSTypeParamterInGetInstanceThenThrowException()
-    {
+    static void givenNullSTypeParamterInGetInstanceThenThrowException() {
         //
         // Given
-        di_Module module= new di_Module();
+        di_Module module = new di_Module();
         di_Injector injector = new di_Injector(module);
         Schema.SObjectType sType = null;
-        Boolean hasException=false;
+        Boolean hasException = false;
         // Then
 
         try {
-            injector.getInstance(di_Module.class,sType);
+            injector.getInstance(di_Module.class, sType);
         } catch (di_Injector.InjectorException excp) {
-            hasException=true;
+            hasException = true;
         }
         // Then
         system.assertEquals(true, hasException);
     }
     @isTest
-    static void givenNullParamterInGetInstanceThenThrowException()
-    {
+    static void givenNullParamterInGetInstanceThenThrowException() {
         //
         // Given
-        di_Module module= new di_Module();
+        di_Module module = new di_Module();
         di_Injector injector = new di_Injector(module);
         Schema.SObjectType sType = Account.getSObjectType();
-        Boolean hasException=false;
+        Boolean hasException = false;
         // Then
 
         try {
-            injector.getInstance(Account.class,sType,null);
+            injector.getInstance(Account.class, sType, null);
         } catch (di_Injector.InjectorException excp) {
-            hasException=true;
+            hasException = true;
         }
         // Then
         system.assertEquals(true, hasException);
     }
-
 }
